# mind-you

./: .env  .npmrc  Dockerfile  README.md  index.html  node-conf.json  open_app_instances.bat  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: tauri-cross-build.yml  tauri-push-release.yml
modules/moodle-api/src/core/calendar/: create_calendar_events.rs
modules/moodle-api/src/core/course/: get_courses_by_field.rs
modules/moodle-api/src/core/message/: decline_contact_request.rs  delete_contacts.rs  get_conversation_messages.rs  get_conversations.rs  get_member_info.rs  mark_all_conversation_messages_as_read.rs  mark_all_notifications_as_read.rs  mute_conversations.rs  search_contacts.rs  send_messages_to_conversation.rs  set_favourite_conversations.rs  unmute_conversations.rs  unset_favourite_conversations.rs
modules/moodle-api/src/core/user/: view_user_profile.rs
modules/moodle-api/src/message/popup/: get_popup_notifications.rs  get_unread_popup_notification_count.rs
modules/moodle-client/src/: lib.rs
modules/network/: .gitignore  Cargo.toml  README.md
modules/network/cfg-example/: node-conf.json  server-conf.json
modules/network/src/: ffi_export.rs  lib.rs  main.rs
modules/network/src/common/: allocator.rs  cipher.rs  net.rs
modules/network/src/nat/: windows.rs
modules/network/src/node/: api.rs  mod.rs
modules/network/src/server/: mod.rs
modules/network/src/tun/: mod.rs
public/: FULL BLOCK.json  FULL GREEN1.json  FULL LAND.json  FULL PARKINGB.geojson  FULL ROADS.json  FULL SPORT.json  FULL VIBWETA.geojson
src/: App.tsx  Sidebar.css  index.css  main.tsx
src-tauri/: .env  .env.example  Cargo.toml  build.rs  release.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bolt.rs  lib.rs  main.rs  news.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/commands/auth/: mod.rs
src-tauri/src/commands/bolt/: mod.rs
src-tauri/src/commands/moodle/: mod.rs
src-tauri/src/commands/moodle/course/: mod.rs
src-tauri/src/commands/moodle/dashboard/: mod.rs
src-tauri/src/commands/moodle/messages/: mod.rs
src-tauri/src/commands/network/: mod.rs
src-tauri/src/gdrive_plugin/: mod.rs
src-tauri/src/libp2p_plugin/: behaviour.rs  mod.rs  transport.rs
src-tauri/src/moodle/: mod.rs
src-tauri/src/moodle/assignments/: mod.rs  resubmit_assignment.rs  submit_assignment.rs
src-tauri/src/moodle/calendar/: add.rs  create_event.rs  delete.rs  delete_event.rs  edit.rs  edit_start.rs  get.rs  list.rs  mod.rs  month.rs  views.rs
src-tauri/src/moodle/contacts/: block_user.rs  confirm_contact_request.rs  create_contact_request.rs  decline_contact_request.rs  delete_contacts.rs  delete_conversations_by_id.rs  enrol_user.rs  get_contact_requests.rs  get_member_info.rs  get_popup_notifications.rs  get_unread_popup_notification_count.rs  get_user_contacts.rs  mark_all_conversation_messages_as_read.rs  mark_all_notifications_as_read.rs  mark_notification_read.rs  mod.rs  mute_conversations.rs  search_contacts.rs  set_favourite_conversations.rs  unblock_user.rs  unenrol_user.rs  unmute_conversations.rs  unset_favourite_conversations.rs
src-tauri/src/moodle/courses/: get_all_courses.rs  get_course_content.rs  get_course_content_items.rs  get_course_files_assignments_questions.rs  get_courses_site_info.rs  get_enrolled_course.rs  get_enrolled_users.rs  get_user_courses.rs  get_user_courses_with_site_info.rs  mod.rs
src-tauri/src/moodle/messages/: delete_message.rs  get_conversation_messages.rs  get_conversations.rs  mod.rs  send_instant_message.rs  send_message.rs
src-tauri/src/moodle/site/: get_site_info.rs  mod.rs
src-tauri/src/taxi_service/: bolt.rs  mod.rs  taxi_vehicles.rs
src/components/: BallTrail.tsx  SidebarHeader.tsx  system-monitor.tsx
src/components/chat/: ChatMessage.tsx  ChatSidebar.tsx  EmojiPicker.tsx  MessageInput.tsx  PostCard.tsx
src/components/chat/channels/: ChannelHeader.tsx
src/components/chat/channels/pages/: ChannelArea.tsx  InfoArea.tsx
src/components/chat/chats/: ChatHeader.tsx
src/components/chat/chats/pages/: CallArea.tsx  CallContent.tsx  ChatArea.tsx  (+2 more)
src/components/chat/pages/: activity.tsx  contacts.tsx  drafts.tsx  followups.tsx  inbox.tsx  posts.tsx  replies.tsx
src/components/course/: Course.tsx  CourseCard.tsx  CourseDetailsView.tsx  CourseHeader.tsx  CourseList.tsx  CourseListHeader.tsx  CourseSidebar.tsx  Notes.css  Section.tsx  Section2.tsx
src/components/course/pages/: CallArea.tsx  CallContent.tsx  ChannelArea.tsx  InfoArea.tsx  membersArea.tsx
src/components/home/: DesignModel.tsx  FollowPathCanvas.tsx  MapLayerSelector.tsx  NewsCard.tsx  NoContent.tsx  Section.tsx  Watch.tsx  cal.tsx  calendar.tsx  card.tsx  paper.tsx  statusCard.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/map/: Map.css  Map3DOverlay.tsx  MapLayerSelector.tsx  RightPanel.css  RightPanel.tsx  node-text.tsx
src/components/network/: NetworkInfo.tsx  NetworkSidebar.tsx
src/components/ui/: overlay-indicator.tsx
src/components/updater/: updater.tsx
src/contexts/: ChatContext.tsx  CourseContext.tsx  NetworkContext.tsx  SiteContext.tsx  ThemeContext.tsx
src/data/: mockData.ts
src/lib/: api.ts  htmlDecode.ts
src/pages/: Chat.tsx  Course.tsx  Dashboard.tsx  Index.tsx  Map.tsx  Network.tsx
src/types/: leaflet-routing-machine.d.ts
~/key/: tabletopv1.key  tabletopv1.key.pub
