[package]
name = "network"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Standalone Fubuki node client - portable and ready to connect"
license = "MIT OR Apache-2.0"

[lib]
name = "network"
path = "src/lib.rs"

[[bin]]
name = "network"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rand = { version = "0.9", features = ["small_rng"] }
socket2 = "0.6"
parking_lot = "0.12"
anyhow = "1"
ahash = "0.8"
futures-util = "0.3"
ipnet = { version = "2", features = ["serde"] }
arc-swap = "1"
human-panic = "2"
hyper = { version = "1", features = ["server", "client", "http1"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
bincode = { version = "2", features = ["serde"] }
prettytable-rs = "0.10"
scopeguard = "1"
arrayvec = { version = "0.7", features = ["serde"] }
gethostname = "1"
flume = { version = "0.11", default-features = false, features = ["async", "spin"] }
blake3 = { version = "1", features = ["pure"] }
crossbeam-utils = "0.8"
libloading = "0.8"
byte-unit = { version = "5", features = ["serde"] }
linear-map = { git = "https://github.com/contain-rs/linear-map.git" }
mimalloc = { version = "*", default-features = false, optional = true }
pathfinding = "4"
kcp = { git = "https://github.com/Matrix-Zhang/kcp.git", features = ["tokio"] }
stackfuture = "0.3"
smoltcp = "0.12"
once_cell = "1.21.3"
url = "2.5.7"


[target.'cfg(not(target_os = "android"))'.dependencies]
log4rs = { version = "1", default-features = false, features = ["console_appender"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"

[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
net-route = { git = "https://github.com/johnyburd/net-route.git" }
netconfig = { git = "https://github.com/xutianyi1999/netconfig.git" }
hostsfile = { git = "https://github.com/tonarino/innernet.git" }

[target.'cfg(target_os = "macos")'.dependencies]
tempfile = "3"

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "android", target_os = "ios"))'.dependencies]
tun = { git = "https://github.com/xutianyi1999/rust-tun.git", features = ["async"] }
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }

[target.'cfg(target_os = "windows")'.dependencies]
simple_wintun = { git = "https://github.com/xutianyi1999/SimpleWintun.git", features = ["async"] }
windows = { version = "0.61", features = ["Win32_Networking_WinSock"] }
self_update = { version = "0.42", default-features = false, features = ["archive-zip", "compression-zip-deflate", "rustls"] }

[patch.crates-io]
advmac = { git = "https://github.com/xutianyi1999/advmac.git" }

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]
hash-routing-table = []
cross-nat = []

[profile.release]
lto = true
codegen-units = 1

